--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,19 +37,19 @@ h6 {
 }
 
 h1 {
-  @apply text-4xl mb-4 pt-2;
+  @apply text-3xl md:text-4xl mb-4 pt-2;
 }
 
 h2 {
-  @apply text-3xl mb-4 pt-2;
+  @apply text-2xl md:text-3xl mb-4 pt-2;
 }
 
 h3 {
-  @apply text-2xl mb-3 pt-2;
+  @apply text-xl md:text-2xl mb-3 pt-2;
 }
 
 h4 {
-  @apply text-xl mb-2 pt-2;
+  @apply text-lg md:text-xl mb-2 pt-2;
 }
 
 h5 {
