--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,7 +10,7 @@
 
 @layer utilities {
   .font-cursive {
-    font-family: 'Calistoga', cursive;
+    font-family: 'Calistoga', serif;
     letter-spacing: 0.025rem;
   }
 
@@ -37,32 +37,41 @@ h6 {
 }
 
 h1 {
-  @apply text-3xl md:text-4xl mb-4 pt-2;
+  @apply text-3xl md:text-4xl mb-4 md:mb-5 pt-2 md:pt-3;
 }
 
 h2 {
-  @apply text-2xl md:text-3xl mb-4 pt-2;
+  @apply text-2xl md:text-3xl mb-4 md:mb-5 pt-2 md:pt-3;
 }
 
 h3 {
-  @apply text-xl md:text-2xl mb-3 pt-2;
+  @apply text-xl md:text-2xl mb-3 md:mb-4 pt-2 md:pt-3;
 }
 
 h4 {
-  @apply text-lg md:text-xl mb-2 pt-2;
+  @apply text-lg md:text-xl mb-2 md:mb-3 pt-2 md:pt-3;
 }
 
 h5 {
-  @apply font-bold text-lg mb-2 pt-2;
+  @apply font-bold text-lg mb-2 pt-2 md:pt-3;
 }
 
 h6 {
-  @apply font-bold text-base mb-2 pt-2;
+  @apply font-bold text-base mb-2 pt-2 md:pt-3;
 }
 
 p,
 ul {
-  @apply my-5;
+  @apply my-5 leading-7 md:leading-8;
+}
+
+h1 + p,
+h2 + p,
+h3 + p,
+h4 + p,
+h5 + p,
+h6 {
+  @apply mt-0;
 }
 
 blockquote {
@@ -81,6 +90,10 @@ aside p:last-child {
 
 aside {
   @apply text-sm leading-6 px-4 py-3 mx-4 my-8 border-l-4 border-ochre-500 bg-inverse-secondary;
+}
+
+aside p {
+  @apply leading-7;
 }
 
 ul {
